@@ -1,3 +1,8 @@
+2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Added
+	  method for finding a ICompletionData instance.
+
 2007-09-13  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindow.cs,
